# dcs

./: .gitignore  pyproject.toml
asgard-cred1-server/: Makefile  commander_structs.h  cred1_onsky_server.c  cred1_split.json  test.c
asgard-dm-server/: 1  Makefile  asgard_commander_MDM_high_perf_server.c
back_end_server/: back_end_server.py
back_end_server/handlers/: baldr_rts_handlers.py
baldr_python_rtc/baldr_rtc/: server.py
baldr_tt/: Makefile  ZMQ_control_client.py  baldr_tt.cpp  baldr_tt.h  commander_structs.h  def.toml  def1.toml  def2.toml  def3.toml  def4.toml  make_modes.py  modes.fits  save_recon.py  save_tt_performance.py  servo_loop.cpp  ttmet_save_fits.py
calibration_frames/: README
cred1view/: cred1view.py
dcs/: ZMQutils.py
heimdallr/: .heimdallr.cpp.swp  Makefile  ZMQ_control_client.py  cam_client.cpp  commander_structs.h  def.toml  dl_offload.cpp  forward_ft.cpp  fringe_tracker.cpp  heimdallr.cpp  heimdallr.h  save_ft_performance.py  slow_hdlr_tt_offload.py
lab-dm-tools/: asgard_lab_MDM_controller.py
libImageStreamIO/: ImCreate_ft.c  Makefile
mcs_client/: mcs_client.py  test_dm_server_coms.py  test_simple_coms.py
minimal_baldr_python_rtc/: AO.py  BaldrAO.py  Cam.py  DM.py  LazyPirateZMQ.py  Server.py  basis_funcs.py  consts.py  dm_telem.py  gui.py  gui_conf.toml  model.py  t_model.py  utils.py
pyeng_heimdallr/: find_badpix.py  fringe_monitor.py  wfs.py
utils/: acquire_initial_darks.py  dmpattern  fetch_wag_logs.sh  system_health_status.py  universal_client.py  wag_header_dispatch.py  wag_header_info_to_fits.py
(+57 files in other folders)
