# magic line for install is 
# pip install -e . --no-index --find-links ~/Downloads
[project]
name = "dcs"
version = "0.0.1"
readme = "README.md"
requires-python =">=3.8"
license = {file = "LICENSE"}

[project.scripts] 
h-autoalign = "dcs.cmd_scripts.h_autoalign:main"
text-clients = "utils.universal_client:main"
h-shutter = "dcs.cmd_scripts.h_shutterseq:main"
save-ft-performance = "heimdallr.save_ft_performance:main"
back-end-server = "back_end_server.back_end_server:main"
mcs-client = "mcs_client.mcs_client:main"
baldr-server = "baldr_python_rtc.scripts.baldr_server:main"
baldr-start-all = "dcs.cmd_scripts.baldr_start_all:main"

[tool.hatch.build.targets.wheel]
packages = ["dcs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
